k8s/dev/yolo5-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo5-deployment-dev
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo5-dev
  template:
    metadata:
      labels:
        app: yolo5-dev
    spec:
      containers:
      - name: yolo5-dev
        image: IMG_URL
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "5Gi"
            cpu: "2000m"
#        readinessProbe:
#          httpGet:
#            path: /health
#            port: 8081
#          initialDelaySeconds: 5
#          periodSeconds: 10
#        livenessProbe:
#          httpGet:
#            path: /health
#            port: 8081
#          initialDelaySeconds: 10
#          periodSeconds: 15
