k8s/dev/polybot-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot-deployment-dev
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot-dev
  template:
    metadata:
      labels:
        app: polybot-dev
    spec:
      containers:
      - name: polybot-dev

        image: 352708296901.dkr.ecr.us-east-2.amazonaws.com/edenb27-polybot-dev:0.0.40
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        readinessProbe:
          httpGet:
            path: /health
            port: 8443
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8443
          initialDelaySeconds: 10
          periodSeconds: 15

---

apiVersion: v1
kind: Service
metadata:
  name: polybot-service-dev
  namespace: dev
spec:
  selector:
    app: polybot-dev
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
