k8s/dev/polybot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      containers:
      - name: polybot
        image: IMG_URL
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        readinessProbe:
          httpGet:
            path: /health
            port: 8443
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8443
          initialDelaySeconds: 10
          periodSeconds: 15

---

apiVersion: v1
kind: Service
metadata:
  name: polybot-service
spec:
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
