k8s/dev/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-dev
spec:
  tls:
    - hosts:
      - eden-polybot.devops-int-college.com
      secretName: edenb-secret-dev
  ingressClassName: nginx-dev
  rules:
    - host: eden-polybot.devops-int-college.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            # This assumes http-svc exists and routes to healthy endpoints
            service:
              name: polybot-service-dev
              port:
                number: 8443
